--- a/languagelearningapp/src/index.css
+++ b/languagelearningapp/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --main-purple: #7950F2;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
