--- a/languagelearningapp/src/css/review-customisation.css
+++ b/languagelearningapp/src/css/review-customisation.css
@@ -13,3 +13,24 @@
   width: 100%;
   font-size: 3.2rem;
 }
+
+.close-btn {
+  background-color: var(--main-purple);
+  width: 3rem;
+  height: 3rem;
+  border: none;
+  color: white;
+  padding: 2px 4px;
+  margin: 1rem;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 12px;
+  cursor: pointer;
+  transition-duration: 0.4s;
+  font-size: 1.4rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-bottom: 3rem;
+}
