--- a/languagelearningapp/src/index.css
+++ b/languagelearningapp/src/index.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Agdasima&family=Quicksand:wght@300;400;500;600;700&display=swap");
 :root {
   --main-purple: #7950F2;
+  --light-grey: #adb5bd;
 }
 
 
