Updated to work with backend database

--- a/languagelearningapp/src/css/learn.css
+++ b/languagelearningapp/src/css/learn.css
@@ -25,7 +25,7 @@
 }
 
 .word {
-  font-size: 8rem;
+  font-size: 4.8rem;
   color: var(--main-purple);
 }
 
@@ -62,17 +62,19 @@
 }
 
 .translation {
-  font-size: 6rem;
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-bottom: 2.4rem;
 }
 
 .language-example {
-  font-size: 3rem;
-  margin-bottom: 2rem;
+  font-size: 2.6rem;
+  margin-bottom: 2.4rem;
 }
 
 .translated-example {
-  font-size: 3rem;
-  margin-bottom: 2rem;
+  font-size: 2.6rem;
+  margin-bottom: 2.4rem;
 }
 
 .response-message {
