--- a/languagelearningapp/src/css/learn.css
+++ b/languagelearningapp/src/css/learn.css
@@ -82,3 +82,25 @@
   font-size: 2rem;
   margin-bottom: 2rem;
 }
+
+.next-btn {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 0.4rem;
+  text-align: center;
+  justify-content: center;
+  border: none;
+  margin-bottom: 2rem;
+  background-color: var(--main-purple);
+  color: white;
+  font-size: 2rem;
+}
+
+.footer {
+  display: flex;
+  position: absolute;
+  bottom: 9rem;
+  width: 100%;
+  justify-content: space-between;
+  padding: 1rem;
+}
