Update progressbar props, render response message based on microphone success/failure

--- a/languagelearningapp/src/css/learn.css
+++ b/languagelearningapp/src/css/learn.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100%;
   padding: 1rem;
 }
 
@@ -16,7 +17,7 @@
 
 .home-header {
   display: flex;
-  position: absolute;
+  position: fixed;
   top: 0;
 }
 
@@ -56,6 +57,13 @@
   margin-bottom: 2rem;
   background-color: transparent;
   fill: var(--main-purple);
+}
+
+.response-message {
+  width: 100%;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  font-style: italic;
 }
 
 .pronunciation {
@@ -98,9 +106,19 @@
 
 .footer {
   display: flex;
-  position: absolute;
-  bottom: 9rem;
+  position: fixed;
+  bottom: 0rem;
   width: 100%;
   justify-content: space-between;
   padding: 1rem;
+}
+
+.btn-container {
+  position: fixed;
+  bottom: 6rem;
+  right: 2.4rem;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
