--- a/languagelearningapp/src/css/progress.css
+++ b/languagelearningapp/src/css/progress.css
@@ -6,12 +6,15 @@
   margin-top: 10%;
   margin-bottom: 10%;
   padding: 2rem;
+  background-color: #fff;
 }
 
-.card {
-  background-color: rgba(128, 0, 128, 0.18);
+.chart-card {
+  background-color: #fff;
+  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.1);
+  border: none;
   border-radius: 15px;
-  width: 90%;
+  width: 100%;
   padding: 1rem;
   margin-bottom: 1.8rem;
 }
@@ -24,9 +27,10 @@
 
 .number-card {
   width: calc(50% - 10px);
-  background-color: rgba(128, 0, 128, 0.18);
+  background-color: #fff;
   padding: 1rem;
   border-radius: 15px;
+  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
 .number-card h2 {
