--- a/languagelearningapp/src/css/progress.css
+++ b/languagelearningapp/src/css/progress.css
@@ -1,15 +1,16 @@
 .progressDiv {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  margin-top: 10%;
-  margin-bottom: 10%;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
   padding: 2rem;
-  background-color: #fff;
+  padding-top: 7rem;
 }
 
-.chart-card {
+.calendar-card,
+.graph-card {
   background-color: #fff;
   box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.1);
   border: none;
@@ -17,6 +18,10 @@
   width: 100%;
   padding: 1rem;
   margin-bottom: 1.8rem;
+}
+
+.graph-card {
+  height: 22rem;
 }
 
 .number-card-container {
@@ -34,13 +39,13 @@
 }
 
 .number-card h2 {
-  font-size: 2.8rem;
+  font-size: 2.4rem;
   font-weight: 600;
 }
 
 .words-learned,
 .words-reviewed {
-  font-size: 6.4rem;
+  font-size: 5rem;
   font-weight: 600;
 }
 
