--- a/languagelearningapp/src/css/calendarOverrides.css
+++ b/languagelearningapp/src/css/calendarOverrides.css
@@ -1,5 +1,4 @@
 .react-calendar {
-  width: 100%;
   max-width: 100%;
   background: white;
   border: none;
@@ -95,13 +94,15 @@
 }
 
 .react-calendar__tile {
-  max-width: 100%;
-  padding: 10px 6.6667px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  padding: 0;
   background: none;
   text-align: center;
-  line-height: 16px;
-  height: 45px;
-  width: 45px;
+  border-radius: 50%;
 }
 
 .react-calendar__tile:disabled {
