--- a/languagelearningapp/src/css/progress.css
+++ b/languagelearningapp/src/css/progress.css
@@ -56,3 +56,38 @@
 .words-reviewed {
   color: #60a7a8;
 }
+
+/* Modal window (Learned/Reviewd)*/
+.modal-dialog {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.modal-title {
+  font-size: 2.8rem;
+}
+
+.modal-body {
+  font-size: 2rem;
+  color: var(--main-purple);
+}
+
+.modal-button {
+  font-size: 2rem;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  padding: 4px 12px;
+}
+
+.learned-modal ul {
+  padding: 5px;
+}
+
+.learned-modal li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
