--- a/languagelearningapp/src/css/ReviewChoice.css
+++ b/languagelearningapp/src/css/ReviewChoice.css
@@ -29,14 +29,21 @@
 }
 .tfContainer .true {
   background-color: #30cf4b;
+  border: none;
 }
 .tfContainer .false {
   background-color: #ff6b6b;
+  border: none;
 }
 .correctText {
   font-size: 2rem;
   font-weight: 700;
   color: #30cf4b;
+}
+.incorrectText {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #ff6b6b;
 }
 .progBarContainer {
   width: 100%;
