--- a/languagelearningapp/src/css/navbar.css
+++ b/languagelearningapp/src/css/navbar.css
@@ -22,3 +22,14 @@
 .nav-bar-container .selected-icon {
   transform: scale(1.2);
 }
+
+.logout-btn {
+  background-color: var(--main-purple);
+  color: var(--white);
+  font-size: 2rem;
+  text-align: center;
+  border-radius: 15px;
+  padding: 1rem;
+  margin: 1rem;
+  border: none;
+}
